# draft_fastapi_gen

./: .gitignore  README.md  pyproject.toml
liquibase/: README.md  changelog-master.yaml
liquibase/migration/: 001-init-user-and-outbox.yaml  002-add-user-constraints-and-outbox-retry.yaml
scripts/: README.md  scaffold_service.py
services/: README.md
services/user_service/: README.md
services/user_service/app/: README.md  main.py
services/user_service/app/api/: README.md  routes.py  schemas.py
services/user_service/app/application/: README.md  idempotency.py  user_service.py
services/user_service/app/config/: README.md  settings.py
services/user_service/app/domain/: README.md  events.py  user.py
services/user_service/app/infra/: README.md  db.py  kafka.py  outbox.py  redis_client.py  repositories.py
services/user_service/app/observability/: README.md  logging.py  metrics.py  tracing.py
services/user_service/app/resilience/: README.md  circuit_breaker.py  retry.py
services/user_service/app/workers/: README.md  outbox_publisher.py
tests/: conftest.py
tests/application/: test_idempotency.py  test_user_service.py
tests/workers/: test_outbox_publisher.py
