[project]
name = "ai-platform"
version = "0.1.0"
description = "Distributed AI platform around FastAPI with event-driven architecture"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "aiokafka>=0.10.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-exporter-otlp>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "opentelemetry-instrumentation-asyncpg>=0.47b0",
    "opentelemetry-instrumentation-httpx>=0.47b0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
line-length = 100
